grid fix on mobile

--- a/src/Pages/Home/Hero.css
+++ b/src/Pages/Home/Hero.css
@@ -58,7 +58,7 @@
     grid-row: 1;
   }
 
-  .banner-photo {
+  .hero-photo {
     grid-column: 1;
     grid-row: 2;
   }
